--- a/src/components/form/create-exhibition/forms/index.module.scss
+++ b/src/components/form/create-exhibition/forms/index.module.scss
@@ -11,7 +11,6 @@
   gap: 3rem;
 }
 
-.formTwoContainer,
 .ctaContainer {
   width: 100%;
   display: flex;
